added features section

--- a/enterprise.html
+++ b/enterprise.html
@@ -53,38 +53,43 @@
                         <p class="enterprise-feature-desc">Connects with the software your enterprise already uses</p>
                     </div>
                     <div>
-                        <h4>Scales seamlessly</h4>
-                        <p>Whether you have 500 or 50,000 employees, Nimbus adapts to your structure</p>
+                        <h4 class="enterprise-feature-title">Scales seamlessly</h4>
+                        <p class="enterprise-feature-desc">Whether you have 500 or 50,000 employees, Nimbus adapts to your structure</p>
                     </div>
                     <div>
-                        <h4>Automates workflows</h4>
-                        <p>Cuts down repetitive tasks so teams can focus on strategy, not admin</p>
+                        <h4 class="enterprise-feature-title">Automates workflows</h4>
+                        <p class="enterprise-feature-desc">Cuts down repetitive tasks so teams can focus on strategy, not admin</p>
                     </div>
                     <div>
-                        <h4>Strengthens security & compliance</h4>
-                        <p>Built-in enterprise-grade security, GDPR & SOC 2 ready</p>
+                        <h4 class="enterprise-feature-title">Strengthens security & compliance</h4>
+                        <p class="enterprise-feature-desc">Built-in enterprise-grade security, GDPR & SOC 2 ready</p>
                     </div>
                     <div>
-                        <h4>Boosts productivity</h4>
-                        <p>Reduces tool-switching with everything in one connected platform</p>
+                        <h4 class="enterprise-feature-title">Boosts productivity</h4>
+                        <p class="enterprise-feature-desc">Reduces tool-switching with everything in one connected platform</p>
                     </div>
                     <div>
-                        <h4>Data-driven insights</h4>
-                        <p>Advanced analytics highlight trends, bottlenecks, and growth opportunities</p>
+                        <h4 class="enterprise-feature-title">Data-driven insights</h4>
+                        <p class="enterprise-feature-desc">Advanced analytics highlight trends, bottlenecks, and growth opportunities</p>
                     </div>
                 </div>
             </section>
-            <section>
-                <h3>See what we've done</h3>
-                <div>
-                    <h4>Enterprises reported a 25% increase in productivity within the first 6 months</h4>
-                    <h4>Large enterprises saw a 35% improvement in data accuracy</h4>
-                    <h4>Reduced average response time on client requests by 4 hours</h4>
-                    <h4>Helped teams launch campaigns 3 weeks faster than before</h4>
+            <section id="enterprise-stats-section">
+                <h3 class="stats-header">See what we've done</h3>
+                <div class="dot-separator">
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                </div>
+                <div class="enterprise-stats">
+                    <h4 class="stat-line">Enterprises reported a 25% increase in productivity within the first 6 months</h4>
+                    <h4 class="stat-line">Reduced average response time on client requests by 4 hours</h4>
+                    <h4 class="stat-line">Helped teams launch campaigns 3 weeks faster than before</h4>
+                    <h4 class="stat-line">Enterprises saw a 35% improvement in data accuracy</h4>
                 </div>
             </section>
-            <section>
-                <h3>Discover what Nimbus can do for you</h3>
+            <section id="enterprise-cta">
+                <h3 class="team-cta-title">Discover what Nimbus can do for your team</h3>
                 <button class="contact-sales-btn">Contact sales</button>
             </section>
         </main>
