changed button styling

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <section id="hero-section">
                 <h2>Your files.<br>Always secure.<br>All the time.</h2>
                 <h3>Nimbus keeps your documents secure so you can store, collab, and share whenever and wherever you are.</h3>
-                <button>Get started</button>
+                <button class="contact-sales-btn">Get started</button>
             </section>
             <div class="dot-separator">
                 <span class="dot"></span>
@@ -91,7 +91,7 @@
             </section>
             <section class="home-sections" id="cta-section">
                 <h2>Join the Nimbus cloud today and soar to new heights.</h2>
-                <button id="cta-btn">Sign Up Now</button>
+                <button class="contact-sales-btn">Sign Up Now</button>
             </section>
         </main>
         <footer>
