changed padding and added a testimonial

--- a/enterprise.html
+++ b/enterprise.html
@@ -40,6 +40,10 @@
                 <p class="banner-title-2">Nimbus gives your organization the tools to work smarter, faster, and more securely — no matter how large your teams grow. From advanced security to custom integrations.</p>
                 <button class="contact-sales-btn">Contact sales</button>
             </section>
+            <section class="team-testimonial">
+                <p >Before Nimbus, coordinating across our global offices felt like a constant uphill battle. We had separate tools for communication, project tracking, and reporting — and nothing truly connected. With Nimbus, everything lives in one place. Our teams collaborate in real time, onboarding is smoother, and leadership finally has visibility into projects across regions. It’s not just software — Nimbus has become the backbone of how we operate as an enterprise.”</p>
+                <p><i>— Michael Chen, VP of Operations, Horizon Global</i></p>
+            </section>
             <section id="enterprise-features-section">
                 <h3 class="feature-header">How Nimbus helps corporations grow</h3>
                 <div class="dot-separator">
