added contact link to footer of all pages

--- a/enterprise.html
+++ b/enterprise.html
@@ -38,7 +38,7 @@
             <section class="banner-card enterprise-banner">
                 <h2 class="banner-title">Take your corporation to the next level</h2>
                 <p class="banner-title-2">Nimbus gives your organization the tools to work smarter, faster, and more securely — no matter how large your teams grow. From advanced security to custom integrations.</p>
-                <button class="contact-sales-btn">Contact sales</button>
+                <button class="contact-sales-btn"><a class="get-started-btn" href="contact-sales.html">Contact sales</a></button>
             </section>
             <section class="team-testimonial">
                 <p >Before Nimbus, coordinating across our global offices felt like a constant uphill battle. We had separate tools for communication, project tracking, and reporting — and nothing truly connected. With Nimbus, everything lives in one place. Our teams collaborate in real time, onboarding is smoother, and leadership finally has visibility into projects across regions. It’s not just software — Nimbus has become the backbone of how we operate as an enterprise.”</p>
@@ -94,7 +94,7 @@
             </section>
             <section id="enterprise-cta">
                 <h3 class="team-cta-title">Discover what Nimbus can do for your team</h3>
-                <button class="contact-sales-btn">Contact sales</button>
+                <button class="contact-sales-btn"><a class="get-started-btn" href="contact-sales.html">Contact sales</a></button>
             </section>
         </main>
         <footer>
@@ -115,7 +115,7 @@
             <div class="footer-section">
                 <h4>Company</h4>
                 <a href="">About</a>
-                <a href="">Contact Us</a>
+                <a href="contact-sales.html">Contact Us</a>
                 <a href="">Privacy & terms</a>
                 <a href="">Cookie policy</a>
             </div>
