--- a/hr.html
+++ b/hr.html
@@ -87,7 +87,7 @@
             <div class="footer-section">
                 <h4>Company</h4>
                 <a href="">About</a>
-                <a href="">Contact Us</a>
+                <a href="contact-sales.html">Contact Us</a>
                 <a href="">Privacy & terms</a>
                 <a href="">Cookie policy</a>
             </div>
