added contact sales link to all teams pages

--- a/hr.html
+++ b/hr.html
@@ -38,7 +38,7 @@
             <section class="banner-card">
                 <h2 class="banner-title">Nimbus takes the complexity out of HR by streamlining hiring, onboarding, and employee support—all in one platform</h2>
                 <h3 class="banner-title-2">From recruiting top talent to retaining your best people, Nimbus gives HR the tools to build stronger, happier teams. Focus on what matters most: your people.</h3>
-                <button class="contact-sales-btn">Contact sales</button>
+                <button class="contact-sales-btn"><a class="get-started-btn" href="contact-sales.html">Contact sales</a></button>
             </section>
             <section class="team-testimonial">
                 <p>"Nimbus helped us shift from just managing processes to truly supporting people. Our employees feel heard, onboarding is welcoming, and retention has improved because the experience feels consistent and human."</p>
@@ -66,7 +66,7 @@
             </section>
             <section class="team-cta">
                 <h5 class="team-cta-title">A single platform to hire, onboard, and retain with ease</h5>
-                <button class="contact-sales-btn">Contact sales</button>
+                <button class="contact-sales-btn"><a class="get-started-btn" href="contact-sales.html">Contact sales</a></button>
             </section>
         </main>
         <footer>
