--- a/marketing.html
+++ b/marketing.html
@@ -38,7 +38,7 @@
             <section class="banner-card">
                 <h2 class="banner-title">Nimbus helps your team create, launch, and measure campaigns that deliver results that speak for themselves</h2>
                 <h3 class="banner-title-2">Nimbus helps marketing teams collaborate, organize campaigns, and measure performance to grow faster, keeping your marketing team organized and focused on what matters most.</h3>
-                <button class="contact-sales-btn">Contact sales</button>
+                <button class="contact-sales-btn"><a class="get-started-btn" href="contact-sales.html">Contact sales</a></button>
             </section>
             <section class="team-testimonial">
                 <p>"Nimbus gave our marketing team the clarity we were missing. Instead of chasing down updates or digging through email threads, we can now focus on the big picture—building campaigns that connect. Since switching, our team feels more creative and our launches hit the market faster."</p>
@@ -66,7 +66,7 @@
             </section>
             <section class="team-cta">
                 <h5 class="team-cta-title">Start building smarter campaigns with Nimbus today</h5>
-                <button class="contact-sales-btn">Contact sales</button>
+                <button class="contact-sales-btn"><a class="get-started-btn" href="contact-sales.html">Contact sales</a></button>
             </section>
         </main>
         <footer>
