--- a/sales.html
+++ b/sales.html
@@ -38,7 +38,7 @@
             <section class="banner-card">
                 <h2 class="banner-title">Nimbus gives your sales team the tools to track leads, collaborate seamlessly, and close deals efficiently</h2>
                 <h3 class="banner-title-2">Nimbus helps your sales team work smarter—not harder. Get real-time insights, improve collaboration, and watch your deals move faster than ever.</h3>
-                <button class="contact-sales-btn">Contact sales</button>
+                <button class="contact-sales-btn"><a class="get-started-btn" href="contact-sales.html">Contact sales</a></button>
             </section>
             <section class="team-testimonial">
                 <p>“Nimbus has completely transformed the way our sales team works. Before, we were juggling spreadsheets and missing follow-ups. Now, everything is in one place—we can track leads, collaborate across the team, and see exactly where deals stand.”</p>
@@ -66,7 +66,7 @@
             </section>
             <section class="team-cta">
                 <h5 class="team-cta-title">Nimbus gives your team the clarity, speed, and tools they need to win.</h5>
-                <button class="contact-sales-btn">Contact sales</button>
+                <button class="contact-sales-btn"><a class="get-started-btn" href="contact-sales.html">Contact sales</a></button>
             </section>
         </main>
         <footer>
