added sections to contact page and styled

--- a/contact-sales.html
+++ b/contact-sales.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <header>
-            <h1 id="nimbus-title"><a href="" id="nimbus-title-link">NIMBUS</a></h1>
+            <h1 id="nimbus-title"><a href="index.html" id="nimbus-title-link">NIMBUS</a></h1>
             <nav>
                 <a id="nav-toggle" href="">
                     <span class="nav-bar"></span>
@@ -35,7 +35,23 @@
             </nav>
         </header>
         <main>
+            <section id="contact-info">
+                <h1>Contact Sales</h1>
+                <p>We would love to answer any questions you have. You can reach us Monday thru Friday from 8:00 A.M. CST to 5:00 P.M. CST.</p>
+                <br>
+                <p>Please note we are closed most major holidays.</p>
+                <br>
+                <p>For sales:</p>
+                <p>1-888-000-0000</p>
+                <br>
+                <p>Any other questions:</p>
+                <p>1-888-800-0000</p>
+            </section>
+            <section id="contact-form-section">
+                <form action="">
 
+                </form>
+            </section>
         </main>
         <footer>
             <div class="footer-section">
