--- a/contact-sales.html
+++ b/contact-sales.html
@@ -67,7 +67,7 @@
                     <p>
                         <label for="number">Phone Number:</label>
                         <br>
-                        <input type="tel" name="number" pattern="[0-9]{3}-[0-9]{3}-[0-9]{3}" required>
+                        <input type="tel" name="number" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="000-000-0000" required>
                     </p>
                     <p>
                         <label for="company">Company Name:</label>
@@ -353,12 +353,12 @@
                             <option value="ZW">Zimbabwe</option>
                         </select>
                     </p>
-                    <p>
+                    <p id="message">
                         <label for="message">Message:</label>
                         <br>
-                        <textarea name="summary" rows="4" cols="50"></textarea>
+                        <textarea name="summary" rows="10" cols="50" placeholder="Share a brief description of your project or requirements…" required></textarea>
                     </p>
-                    <input type="submit">
+                    <input class="contact-sales-btn" type="submit">
                 </form>
             </section>
         </main>
