added filler text to each pricing card

--- a/pricing.html
+++ b/pricing.html
@@ -47,12 +47,12 @@
                 <section class="pricing-card">
                     <h3 class="pricing-plan-title">Standard</h3>
                     <ul class="pricing-features-list">
-                        <li><span class="bullet"></span>Lorem ipsum det, consecteturing elit.</li>
-                        <li><span class="bullet"></span>Lorecing elit.</li>
-                        <li><span class="bullet"></span>Lorem ipsum dolor sit amcing elit.</li>
-                        <li><span class="bullet"></span>r sit amet, pising elit.</li>
-                        <li><span class="bullet"></span>Lor ametur adipising elit.</li>
-                        <li><span class="bullet"></span>Lorem ipsum dolorctetuiscng elit.</li>
+                        <li><span class="bullet"></span>5 GB secure cloud storage</li>
+                        <li><span class="bullet"></span>Sync across unlimited devices</li>
+                        <li><span class="bullet"></span>Basic file sharing (links with expiration)</li>
+                        <li><span class="bullet"></span>Simple version history (up to 7 days)</li>
+                        <li><span class="bullet"></span>Standard encryption for files in transit & at rest</li>
+                        <li><span class="bullet"></span>Offline file access</li>
                     </ul>
                     <p class="pricing-amt"></p>
                     <div class="pricing-btn-container">
@@ -62,12 +62,13 @@
                 <section class="pricing-card">
                     <h3 class="pricing-plan-title">Professional</h3>
                     <ul class="pricing-features-list">
-                        <li><span class="bullet"></span>Lorem ipsum det, consecteturing elit.</li>
-                        <li><span class="bullet"></span>Lorecing elit.</li>
-                        <li><span class="bullet"></span>Lorem ipsum dolor sit amcing elit.</li>
-                        <li><span class="bullet"></span>r sit amet, pising elit.</li>
-                        <li><span class="bullet"></span>Lor ametur adipising elit.</li>
-                        <li><span class="bullet"></span>Lorem ipsum dolorctetuiscng elit.</li>
+                        <li><span class="bullet"></span>100 GB secure cloud storage</li>
+                        <li><span class="bullet"></span>Advanced file sharing (password-protected links)</li>
+                        <li><span class="bullet"></span>Extended version history (up to 30 days)</li>
+                        <li><span class="bullet"></span>Priority email support</li>
+                        <li><span class="bullet"></span>Sync across unlimited devices</li>
+                        <li><span class="bullet"></span>Detailed activity logs & analytics</li>
+                        <li><span class="bullet"></span>Built-in file recovery & ransomware protection</li>
                     </ul>
                     <p class="pricing-amt"></p>
                     <div class="pricing-btn-container">
@@ -77,12 +78,14 @@
                 <section class="pricing-card">
                     <h3 class="pricing-plan-title">Business</h3>
                     <ul class="pricing-features-list">
-                        <li><span class="bullet"></span>Lorem ipsum det, consecteturing elit.</li>
-                        <li><span class="bullet"></span>Lorecing elit.</li>
-                        <li><span class="bullet"></span>Lorem ipsum dolor sit amcing elit.</li>
-                        <li><span class="bullet"></span>r sit amet, pising elit.</li>
-                        <li><span class="bullet"></span>Lor ametur adipising elit.</li>
-                        <li><span class="bullet"></span>Lorem ipsum dolorctetuiscng elit.</li>
+                        <li><span class="bullet"></span>1 TB secure cloud storage</li>
+                        <li><span class="bullet"></span>Team collaboration tools (shared folders, permissions)</li>
+                        <li><span class="bullet"></span>Advanced analytics (file activity tracking, user insights)</li>
+                        <li><span class="bullet"></span>Extended version history (90 days)</li>
+                        <li><span class="bullet"></span>Admin dashboard for user management</li>
+                        <li><span class="bullet"></span>Faster file transfer speeds (network optimization)</li>
+                        <li><span class="bullet"></span>Custom integrations (via API + enterprise connectors)</li>
+                        <li><span class="bullet"></span>Priority infrastructure for faster sync & uploads</li>
                     </ul>
                     <p class="pricing-amt"></p>
                     <div class="pricing-btn-container">
@@ -92,12 +95,15 @@
                 <section class="pricing-card">
                     <h3 class="pricing-plan-title">Business Plus</h3>
                     <ul class="pricing-features-list">
-                        <li><span class="bullet"></span>Lorem ipsum det, consecteturing elit.</li>
-                        <li><span class="bullet"></span>Lorecing elit.</li>
-                        <li><span class="bullet"></span>Lorem ipsum dolor sit amcing elit.</li>
-                        <li><span class="bullet"></span>r sit amet, pising elit.</li>
-                        <li><span class="bullet"></span>Lor ametur adipising elit.</li>
-                        <li><span class="bullet"></span>Lorem ipsum dolorctetuiscng elit.</li>
+                        <li><span class="bullet"></span>Unlimited storage</li>
+                        <li><span class="bullet"></span>Advanced security (SSO, 2FA, audit logs)</li>
+                        <li><span class="bullet"></span>Role-based access & compliance features (HIPAA, SOC 2, GDPR ready)</li>
+                        <li><span class="bullet"></span>Dedicated onboarding & training</li>
+                        <li><span class="bullet"></span>Advanced reporting & insights for teams</li>
+                        <li><span class="bullet"></span>Quarterly business reviews & strategic planning support</li>
+                        <li><span class="bullet"></span>Advanced API & developer tools</li>
+                        <li><span class="bullet"></span>VIP 24/7 phone, email, and live support with guaranteed response time</li>
+                        <li><span class="bullet"></span>and more!</li>
                     </ul>
                     <p class="pricing-amt"></p>
                     <div class="pricing-btn-container">
