added get app buttons

--- a/index.html
+++ b/index.html
@@ -86,8 +86,12 @@
             <section class="home-sections" id="testimonial-section">
                 <h2>Testimonials</h2>
             </section>
-            <section class="home-sections" id="get-app">
+            <section id="get-app">
                 <h3>GET THE APP</h3>
+                <div id="app-container">
+                    <img class="app-img" src="app_store.svg" alt="Download on App Store button">
+                    <img class="app-img" src="google_play.png" alt="Download on Google Play button">
+                </div>
             </section>
             <section class="home-sections" id="cta-section">
                 <h2>Join the Nimbus cloud today and soar to new heights.</h2>
